--- a/s1fp/miyazaki.css
+++ b/s1fp/miyazaki.css
@@ -1,7 +1,7 @@
 html{
     background-color: grey;
 body {
-  background-image: url("/s1fp/Contents/Sens-Closed.png");
+  background-image: url("../s1fp/Contents/Sens-Closed.png");
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
