--- a/s1fp/ChestRoom.css
+++ b/s1fp/ChestRoom.css
@@ -4,7 +4,7 @@ html {
 
 /* Room1 Background */
 body {
-    background-image: url("../s1fp/Contents/Chest_Room.png"); 
+    background-image: url("Contents/Chest_Room.png"); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
