--- a/s1fp/Keyroom.css
+++ b/s1fp/Keyroom.css
@@ -11,26 +11,53 @@ body {
     overflow:hidden;
 }
 
-#pop-up{
-    background-color: black,.8;
-    Position:absolute;
-    top:100px;
-    width:100px;
-    height:100px;
-  
-
+#pop-up {
+    background-color: rgba(0, 0, 0, 0.8);  
+    position:absolute;
+    bottom: 30vh;
+    left: 60vh;
+    width: 50vw;
+    height: 10vh;
+    border-top: 1px rgb(155, 102, 32) solid; 
+    border-bottom: 1px rgb(155,102,32) solid;
+    overflow: hidden;
+    
 }
 
 
+#keys img {
+    width: auto; /* Adjust as needed */
+    height: 10vh;
+}
+
+ 
 
 
-/*.Promptext{
+.left {
+    float: left;
+    background-color: black;
+    border-top: 1px rgb(155, 102, 32) solid; 
+    border-bottom: 1px rgb(155,102,32) solid;
+  }
+
+  .right {
+    float: right;
+    color: rgb(255, 255, 255);
+    position: relative;
+    top: 35%;
+    right:10%;
+    font-size: 20px;
+  }
+
+.Promptext{
     font-family: "Adobe Garamond", serif;
     position: absolute;
-    bottom: 25%;
+    top: 35%;
     left: 25%;
     font-weight: narrow;
     color: rgb(255, 255, 255);
     font-size: 20px;
     
 }
+
+
