--- a/s1fp/Yes.css
+++ b/s1fp/Yes.css
@@ -5,7 +5,7 @@ html {
 
 /* Sens Fortress Front Img */
 body {
-    background-image: url("Contents/Sens-Closed.png"); 
+    background-image: url("Contents/Sens-Open.png"); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -116,35 +116,5 @@ body {
     position: absolute;
     left: 35%;
     top: 5%;
-}
-
-
-/* Mimic Chest */
-
-
-
-
-/* YOU DIED animation */
-
-#YOU_DIED-bg{
-
-    background-color: black;
-    filter: blur(3px);
-    width: 100%;
-    height:100%;
-    animation: fadeIn 4s ease-in-out forwards;
-}
-
-
-.DIED-text {
-    font-family: "Optimus Princeps";
-    position: absolute;
-    bottom: 45%;
-    left: 35%;
-    font-weight: normal;
-    color: red;
-    font-size: 120px;
-    filter: blur(2px);
-    animation: fadeIn 5s ease-in-out forwards;
 }
 
